--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i": "^0.3.7",
     "npm": "^8.15.1",
     "react": "^18.2.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
   },
